Fix code to click panel-button on visible panel

--- a/css/app.css
+++ b/css/app.css
@@ -34,6 +34,7 @@ body {
 
 .panel.hide {
   opacity: 0;
+  z-index: -1;
 }
 
 .panel-content {
